fix(ui): adjust z-indexes to ensure dialog is above axis labels

--- a/src/components/Dialog/styles/styles.module.css
+++ b/src/components/Dialog/styles/styles.module.css
@@ -14,6 +14,7 @@
   padding: 1rem;
   position: absolute;
   text-align: center;
+  z-index: 100;
 }
 
 .dialogButton {
